# ai-dev-productivity-tools

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  ai_cli_tool.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: sample_output.md  sample_task.txt
prompts/: code_explanation.md  debugging.md  documentation_generation.md  task_solver.md  test_generation.md
tests/: test_ai_cli_tool.py
