[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-productivity-tools"
version = "0.1.0"
description = "Open-source tools that help developers automate repetitive tasks using AI."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Armend Ujkani" }
]
keywords = ["ai", "developer-tools", "productivity", "prompts", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]

[project.urls]
Homepage = "https://github.com/armendujkani123/ai-dev-productivity-tools"
Issues = "https://github.com/armendujkani123/ai-dev-productivity-tools/issues"

[project.scripts]
ai-dev-prompt = "ai_cli_tool:main"

[tool.setuptools]
py-modules = ["ai_cli_tool"]
